<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_app">

        <Preference
            android:key="app_name"
            android:title="@string/pref_app_name"
            android:summary="@string/pref_app_name_summary" />

        <Preference
            android:key="app_package"
            android:title="@string/pref_app_package"
            android:summary="@string/pref_app_package_summary" />

        <Preference
            android:key="app_version"
            android:title="@string/pref_app_version"
            android:summary="@string/pref_app_version_summary" />

        <Preference
            android:key="app_clear_data"
            android:title="@string/pref_app_clear_data"
            android:summary="@string/pref_app_clear_data_summary"/>

        <Preference
            android:key="app_uninstall"
            android:title="@string/pref_app_uninstall"
            android:summary="@string/pref_app_uninstall_summary"/>

    </PreferenceCategory>
</PreferenceScreen>