<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/display_settings"
    >
    <!-- 亮度 -->
    <Preference
        android:key="brightness"
        android:title="@string/brightness"
        >
        <intent android:action="android.intent.action.SHOW_BRIGHTNESS_DIALOG" />
    </Preference>
    <PreferenceCategory
        android:title="@string/global_setting"
        android:persistent="false"
        android:key="display_global">
        <!-- 全局設置 -->
        <SwitchPreference
            android:key="global_arc_menu"
            android:summary="@string/global_arc_menu_summary"
            android:title="@string/global_arc_menu"
            />

        <!-- 浮動back -->
        <SwitchPreference
            android:key="global_floated_back"
            android:summary="@string/global_floated_back_summary"
            android:title="@string/global_floated_back" />

    <!-- 是否播放开机视频 -->
    <SwitchPreference
        android:key="global_boot_video"
        android:summary="@string/global_boot_video_summary"
        android:title="@string/global_boot_video" />

    <!--双屏同显 -->
    <SwitchPreference
        android:key="global_dual_screen"
        android:summary="@string/global_dual_screen_summary"
        android:title="@string/global_dual_screen" />
    </PreferenceCategory>
    <!--HDMI设置 -->
    <PreferenceCategory android:key="hdmi_setting"
        android:title="@string/hdmi_setting">
        <ListPreference
            android:key="hdmi_output_mode"
            android:title="@string/hdmi_output_mode"
            android:summary="@string/hdmi_output_mode_summary"
            android:entries="@array/hdmi_output_mode_entries"
            android:entryValues="@array/hdmi_output_mode_values" />
        <SeekBarPreference
            android:key="hdmi_width_scale"
            android:title="@string/hdmi_width_scale"
            />
        <SeekBarPreference
            android:key="hdmi_height_scale"
            android:title="@string/hdmi_height_scale"
            />
    </PreferenceCategory>
</PreferenceScreen>